# SimuladorDirecional

./: .gitignore  CLERK_SETUP.md  DEPLOY.md  pyproject.toml  requirements.txt  vercel.json  vercel_app.py
simulador_dv/: README.md  __init__.py  app.py  streamlit_app.py
simulador_dv/api/: CONTRATOS.md  ESTADO_SESSAO.md  INVENTORY.md  PARITY.md  __init__.py  data_context.py  deps.py  estado_helpers.py  main.py  schemas.py  schemas_flow.py  session_store.py
simulador_dv/assets/: README.md
simulador_dv/config/: __init__.py  constants.py  taxas_comparador.py
simulador_dv/core/: __init__.py  comparador_emcash.py  pro_soluto_comparador.py
simulador_dv/data/: __init__.py  conteudo.json  excel_ps_parity.json  politicas_ps.py  premissas.py
simulador_dv/docs/: PERFORMANCE.md  PLANILHA_SCHEMA.md
simulador_dv/services/: __init__.py  analytics_cliente.py  atos_distribuir.py  cliente_cadastro.py  cliente_merge.py  compute.py  constants.py  cpf_utils.py  cpf_validacao.py  data_loader.py  email_smtp.py  fechamento_ui.py  financeiro_streamlit.py  format_utils.py  galeria_catalogo.py  historico_import.py  home_banners.py  motor_recomendacao.py  pagamento_fluxo.py  pagamento_ui.py  payment_flow.py  pdf_resumo.py  recomendacoes_guide.py  resumo_html.py  secrets_loader.py  sheets_cms.py  simulacao_sheets.py  sistema_data.py
simulador_dv/tests/: test_api.py  test_auth_production.py  test_fechamento_ui.py  test_historico_import.py  test_pro_soluto_comparador.py  test_simulacao_sheets.py
simulador_dv/ui/: __init__.py  inject.py
web/: README.md  index.html
web/css/: app.css
(+31 files in other folders)
